--- a/composer.json
+++ b/composer.json
@@ -3,43 +3,55 @@
     "bin": [
         "bin/gendiff"
     ],
-    "autoload": {
-        "files": [
-            "src/Differ.php",
-            "src/Parsers.php",
-            "src/Formatters.php",
-            "src/Formatters/Json.php",
-            "src/Formatters/Plain.php",
-            "src/Formatters/Stylish.php"
-        ],
-        "psr-4": {
-            "Differ\\Tests\\": "tests",
-            "Differ\\": "src"
-        }
-    },
-    "description": "Generate diff",
-    "type": "project",
-    "minimum-stability": "stable",
+    "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "Hooman",
             "email": "denis_paramon@icloud.com"
         }
     ],
-    "require": {
-        "php": ">=8.1.0",
-        "docopt/docopt": "^1.0",
-        "symfony/yaml": "^5.2",
-        "funct/funct": "^1.5"
+    "description": "difrencesFiles",
+    "autoload": {
+        "files": [
+            "src/DataGetter.php",
+            "src/Parser.php",
+            "src/Differ.php",
+            "src/Formatter.php",
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php",
+            "src/Formatters/Json.php"
+        ]
     },
     "scripts": {
-        "phpcs": "phpcs",
-        "phpunit": "phpunit"
+        "test:coverage": [
+            "@putenv XDEBUG_MODE=coverage",
+            "phpunit tests --color=always --coverage-clover build/logs/clover.xml"
+        ],
+        "test:coverage-text": [
+            "@putenv XDEBUG_MODE=coverage",
+            "phpunit tests --color=always --coverage-text"
+        ],
+        "test:coverage-html": [
+            "@putenv XDEBUG_MODE=coverage",
+            "phpunit tests --color=always --coverage-html build/coverage"
+        ]
     },
-    "license": "MIT",
+    "require": {
+        "php": ">=8.3.3",
+        "docopt/docopt": "^1.0",
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^7.0"
+    },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.11",
-        "phpunit/phpunit": "^9",
-        "phpstan/phpstan": "^1.11"
+        "squizlabs/php_codesniffer": "^3.6",
+        "phpunit/phpunit": "^9.5",
+        "symfony/var-dumper": "^5.4",
+        "phpstan/phpstan": "^1.10"
+    },
+    "config": {
+        "platform": {
+            "php": "8.3.3"
+        }
     }
 }
