--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,3 +7,6 @@ parameters:
 
     checkMissingIterableValueType: false
     reportUnmatchedIgnoredErrors: false
+
+    ignoreErrors:
+        - '#Dynamic call to static method#' 
